--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask==1.1.2
 Flask-Hashing==1.1
 Flask-JWT-Extended==3.24.1
 Flask-SQLAlchemy==2.4.1
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
